# werkzeugkiste

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  README.md  README_8md.html  TODOs.md  about.html  about_8dox.html  annotated.html  camera_8h.html  casts_8h.html  circular__buffer_8h.html  classwerkzeugkiste_1_1config_1_1Configuration.html  classwerkzeugkiste_1_1config_1_1KeyError.html  classwerkzeugkiste_1_1config_1_1KeyMatcher.html  classwerkzeugkiste_1_1config_1_1MultiKeyMatcher.html  classwerkzeugkiste_1_1config_1_1ParseError.html  classwerkzeugkiste_1_1config_1_1SingleKeyMatcher.html  classwerkzeugkiste_1_1config_1_1TypeError.html  classwerkzeugkiste_1_1config_1_1ValueError.html  classwerkzeugkiste_1_1container_1_1Ordering.html  classwerkzeugkiste_1_1container_1_1circular__buffer.html  classwerkzeugkiste_1_1container_1_1circular__buffer__iterator.html  classwerkzeugkiste_1_1files_1_1AsciiFileIterator.html  classwerkzeugkiste_1_1files_1_1IOError.html  classwerkzeugkiste_1_1geometry_1_1Circle__.html  classwerkzeugkiste_1_1geometry_1_1Line2d__.html  classwerkzeugkiste_1_1geometry_1_1Line3d__.html  classwerkzeugkiste_1_1geometry_1_1Plane__.html  classwerkzeugkiste_1_1geometry_1_1Vec.html  classwerkzeugkiste_1_1timing_1_1StopWatch__.html  configuration_8h.html  deprecated_CMakeLists.txt  dir_18bcfd5a025671cfa03ac335a1f7d2f1.html  (+47 more)
.github/workflows/: ci.yml
cmake/: FindFilesystem.cmake  cmake_uninstall.cmake.in  coverage.cmake  docs-ci.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  prelude.cmake  project-is-top-level.cmake  spell.cmake  variables.cmake  werkzeugkiste_dependencies.cmake  werkzeugkiste_examples.cmake
examples/: CMakeLists.txt
examples/cmake-fetch/: CMakeLists.txt
examples/installed-locally/: CMakeLists.txt
examples/src/: config_example.cpp  container_example.cpp  files_example.cpp  geometry_example.cpp  strings_example.cpp  timing_example.cpp  tomlspec.toml
include/werkzeugkiste/: logging.h  version.h
include/werkzeugkiste/config/: casts.h  configuration.h  keymatcher.h  types.h
include/werkzeugkiste/container/: circular_buffer.h  math.h  sort.h
include/werkzeugkiste/files/: fileio.h  filesys.h
include/werkzeugkiste/geometry/: camera.h  geometry.h  primitives.h  projection.h  utils.h  vector.h
include/werkzeugkiste/sort/: sort.h
include/werkzeugkiste/strings/: strings.h
include/werkzeugkiste/timing/: stopwatch.h  tictoc.h
libs/ryml/: ryml_all.hpp
src/: version.h.in  werkzeugkiste_macros.h
src/config/: configuration.cpp  json.cpp  keymatcher.cpp  libconfig.cpp  types.cpp  yaml.cpp
src/files/: fileio.cpp  filesys.cpp
src/geometry/: primitives.cpp  vector.cpp
src/strings/: strings.cpp
src/timing/: stopwatch.cpp  tictoc.cpp
tests/: CMakeLists.txt
tests/container/: circular_buffer_test.cpp  math_utils_test.cpp  sort_utils_test.cpp
tests/files/: fileio_test.cpp  filesys_test.cpp
tests/geometry/: primitives_test.cpp  projection_test.cpp  utils_test.cpp  vector_test.cpp
tests/sort/: sort_utils_test.cpp
tests/src/: FIXME_AUTOGENERATED_werkzeugkiste_test.cpp  test_utils.cpp  test_utils.h
tests/src/config/: cast_test.cpp  compound_test.cpp  config_test.cpp  io_test.cpp  key_test.cpp  list_test.cpp  scalar_test.cpp  test-invalid.cfg  test-invalid.toml  test-libconfig.toml  test-valid.cfg  test-valid.json  test-valid1.toml  test-valid2.toml  type_test.cpp  utilities_test.cpp
tests/src/container/: circular_buffer_test.cpp  math_utils_test.cpp  sort_utils_test.cpp
tests/src/files/: fileio_test.cpp  filesys_test.cpp
tests/src/geometry/: primitives_test.cpp  projection_test.cpp  utils_test.cpp  vector_test.cpp
tests/src/strings/: strings_test.cpp
tests/src/timing/: stopwatch_test.cpp  tictoc_test.cpp
tests/strings/: strings_test.cpp
tests/timing/: stopwatch_test.cpp  test_utils.cpp  test_utils.h  tictoc_test.cpp
